--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
         <i class="bi bi-graph-up"></i>
     </button>
     
+    <!-- API 使用次數顯示 -->
+    <div class="api-usage-indicator" id="apiUsageIndicator">
+        <span class="api-count">0/500</span>
+        <button class="api-reset-btn" id="apiResetBtn" title="重置 API 使用次數">
+            <i class="bi bi-arrow-clockwise"></i>
+        </button>
+    </div>
+    
     <main class="container py-5">
         <!-- 電腦版標題區域 -->
         <div class="text-center mb-4 desktop-only">
