重置按鈕改為重置session

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     <!-- API 使用次數顯示 -->
     <div class="api-usage-indicator" id="apiUsageIndicator">
         <span class="api-count">0/500</span>
-        <button class="api-reset-btn" id="apiResetBtn" title="重置 API 使用次數">
-            <i class="bi bi-arrow-clockwise"></i>
+        <button class="api-reset-btn" id="apiResetBtn" title="重置Session或查看解決方案">
+            <i class="bi bi-arrow-repeat"></i>
         </button>
     </div>
     
